--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/react-app/node_modules
 
 # testing
-/coverage
+/react-app/coverage
 
 # production
-/build
+/react-app/build
 
 # misc
 .DS_Store
@@ -19,5 +17,3 @@
 .env.production.local
 
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
