--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "micromark": "3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^6.0.3",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
